# PayStream

./: Cargo.toml  Dockerfile  EVALUATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  schema.rs  server.rs
crates/core/: Cargo.toml
crates/core/benches/: pipeline_bench.rs
crates/core/src/: aggregator.rs  enricher.rs  lib.rs  pipeline.rs  ports.rs
crates/core/tests/: pipeline_test.rs
crates/infra/: Cargo.toml
crates/infra/src/: config.rs  kafka.rs  lib.rs  metrics.rs
crates/infra/tests/: kafka_it.rs
crates/node/: Cargo.toml
crates/node/src/: main.rs
crates/resilience/: Cargo.toml
crates/resilience/src/: circuit_breaker.rs  lib.rs  rate_limit.rs  retry.rs  timeout.rs
crates/types/: Cargo.toml
crates/types/src/: aggregates.rs  error.rs  event.rs  lib.rs  money.rs
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: paystream-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
postman/: PayStream.postman_collection.json
