[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/resilience",
    "crates/core",
    "crates/infra",
    "crates/api",
    "crates/node",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Abhijeet Ashok Muneshwar"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
governor = "0.6"
rskafka = { version = "0.5", default-features = false }
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
config = "0.14"

# Internal crates
paystream-types = { path = "crates/types" }
paystream-resilience = { path = "crates/resilience" }
paystream-core = { path = "crates/core" }
paystream-infra = { path = "crates/infra" }
paystream-api = { path = "crates/api" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
