[package]
name = "paystream-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
paystream-types.workspace = true
paystream-core.workspace = true
tokio.workspace = true
tracing.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
