[package]
name = "paystream-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
governor.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
